root/css/main.css
/* ... */
#cboxLoadedContent {
  padding: 0px;
}
#cboxContent .widget-data-content-inner {
  padding: 0.5em 1em;
}

/* colour changes for the different types of widgets */

#widget-me {
    border-color: #BDB8A4;
}

#widget-tools {
    border-color: #ABA0B8;
}

#widget-me .widget-header, .navigation .me.ui-selected, .me-bg {
    background-color: #E3DDC5;
}
#widget-resources .widget-header, .navigation .resources.ui-selected, .resources-bg, #widget-resources .navigation .ui-selected {
    background-color: #C2D1DF;
}
#widget-tools .widget-header, .navigation .tools.ui-selected, .tools-bg  {
    background-color: #CFC1DE;
}
#widget-submit_data .widget-header, .navigation .submit_data.ui-selected, .submit_data-bg, #submit_data .navigation .ui-selected {
    background-color: #C2D1DF;
}
/* END styles for standard widgets */





/* widget field titles: ie Identification > IDs */
div.field {
  clear:both;
  /* float:left; breaks toggle for Phenotype_not_observed field */
  line-height:1.2em;
  padding: 7px 0.2em;
  width:100%;
  position:relative;
}
div.detail-box div.field {
  padding: 0.2em;
}

div.field-title {
  display:inline-table;
  float: left;
  text-align: right;
  font-size: 1em;
  padding:0 0.5em 0 0;
  width: 10em;
  font-weight: bold;
}

div.field-content {
  /* display:inline-table; */
  display: inline-block;
  float:none;
  width: calc(100% - 11em);
}

.one-column div.field-title {
  float:none;
  position:static;
  vertical-align:top;
  table-layout:fixed;
}

/* used in field-title tooltip */
.qtip-tooltip {
  font-size: 9pt;
}

/* Curator specific fields */
div.field-curator {
  margin:1em;
  padding:1em;
  background:#CCFFFF;
  border:1px solid gray;
  width:80%;
}

div.field-curator span.desc {
  position:absolute;
  right:0.4em;
  bottom:0.2em;
}

#colorbox div.field-title {
  width: 7em;
}


/* Subfields: fields inside of fields */
/* widget field titles: ie Identification > IDs */

div.field .field .field-title {
  width: 7em;
}

div.field .field .field-content {
  max-width:35em;
}

/* list as direct child of field content */
.field-content > ul {
  margin: 0 0;
  padding: 0 0 0 1em;
}



/* Special field elements */
/* Google Map */
div#google-map {
    position:relative;
    height: auto;
    overflow:hidden;
}

/* curator comment */
.curator-comment-field {
    padding: 0.3em 0;
}

.curator-comment-field .evidence {
    display: inline;
}



/* dataheader and datacell are used in page-wide tables such as in the
   listing of all rearrangements by chrom on the rearrangment page */

.code             {
                    background-color: #CCFFFF;
                    font-family: Courier, monospace;
                    border:1px solid grey;
                    font-size:1em;
                    margin:1em;
                    padding:0.5em;
}



/* ===============================================

       Data-specific styles

   =============================================== */
.species { font-style: italic; }

/* The variation summary */
.cgc-strain {   /* strains available from the CGC */
    font-style:italic;
}

.strains-with-single-variation {
     font-weight:bold;
}

/* image icon ex linking from expression widget to image*/
.img-link {
    cursor: pointer;
    border: 1px solid #666;
    background: white;
    text-align: center;
    margin-top: 5px;
}
.img-link span{
    vertical-align: middle;
    display: inline-block;
    margin-right: 0.2em;
}
.img-link > div.expr-img-wrapper {
    max-height: 100px;
    width: 100px;
    overflow: hidden;
}
.img-link img {
    width: 100%;
}


/* cytoscape legend */
#cyto_legend {
    width:15em;
    position:absolute;
    right:0;
    z-index:1001; /*
                     greater than cy div z-index 1000
                     smaller than dropdown menu in search #searchSelect ul */
}

#cyto_legend div {
    margin: 0.2em 0 0.4em;
}


/* multi-view styling */
.multi-view-container label {
  padding: 0 1em 1em 0.4em;
  display: inline-block;
}

/* GO table styles */
#go_summary_Molecular_function table tbody td:nth-child(2) > ul,
#go_summary_Cellular_component table tbody td:nth-child(2) > ul,
#go_summary_Biological_process table tbody td:nth-child(2) > ul{
  list-style-type: none;
  margin: 0;
}

#go_summary_Molecular_function table tbody td:nth-child(1),
#go_summary_Cellular_component table tbody td:nth-child(1),
#go_summary_Biological_process table tbody td:nth-child(1) {
  width: 60px;
}

/* gene phenotype table and phenotypes table on other pages */
#table_phenotype_by tbody ul,
#table_phenotypes_by tbody ul,
#table_phenotype_not_observed_by tbody ul,
#table_phenotypes_not_observed_by tbody ul,
#table_drives_overexpression_by tbody ul {
  list-style-type: none;
  padding-left: 0;
  margin: 0;
}

#table_phenotype_by tbody td:nth-child(3) .evidence,
#table_phenotypes_by tbody td:nth-child(3) .evidence,
#table_phenotype_not_observed_by tbody td:nth-child(3) .evidence,
#table_phenotypes_not_observed_by tbody td:nth-child(3) .evidence,
#table_drives_overexpression_by tbody td:nth-child(3) .evidence {
  margin-left: 1em; /* so it aligns with non-list elements, in the same column */
}

/* FPKM control statistics table on Expression widget */
table#table_fpkm_controls_by td:nth-child(2),
table#table_fpkm_controls_by td:nth-child(3) {
  width: 40%;
}

/* million mutation project allele table */
#alleles_other_toggle {
  padding: 5px 0 0;
}

#polymorphisms_toggle {
  padding: 5px 0 0;
}

#genetics-alleles p {
  margin: 5px 0 0;
}

#genetics-alleles {
  margin-bottom: 5px;
}


/* referenced widget on paper page */
/* referenced widget layout the thumbnails horizontally */
#referenced-content .img-link {
  float: left;
  margin: 3px;
  padding: 2px;
}
#referenced-content .img-link .expr-img-wrapper {
  height: 100px;
}
#referenced-content .img-link .expr-img-wrapper img {
  width: auto;
  height: 100%
}

/* expression widget */
#expression-content .img-link-collection {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
/* ... */

